--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -52,6 +52,10 @@
                                 <input type="text" name="name" id="name" class="form-control">
                             </div>
                             <div class="form-group">
+                                <label for="email" class="text-info">E-mail</label>
+                                <input type="email" name="email" id="email" class="form-control" data-min-length="2" data-email-validate>
+                              </div>
+                            <div class="form-group">
                                 <label for="username" class="text-info">Usuário:</label><br>
                                 <input type="text" name="username" id="username" class="form-control">
                             </div>
