--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -48,11 +48,7 @@
                         <form id="register-form" class="form" action="" method="post">
                             <h3 class="text-center text-info">Cadastro</h3>
                             <div class="form-group">
-                                <label for="name" class="text-info">Nome:</label><br>
-                                <input type="text" name="name" id="name" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <label for="email" class="text-info">E-mail</label>
+                                <label for="email" class="text-info">E-mail:</label>
                                 <input type="email" name="email" id="email" class="form-control" data-min-length="2" data-email-validate>
                               </div>
                             <div class="form-group">
@@ -68,12 +64,9 @@
                                 <input type="password" name="password-confirm" id="password-confirm"
                                     class="form-control">
                             </div>
-                            <div class="form-group">
-                                <label for="remember-me" class="text-info"><span>Manter Conectado </span> <span><input
-                                            id="remember-me" name="remember-me" type="checkbox"></span></label><br>
-                            </div>
-                            <input name="submit" class="btn btn-info btn-md" value="Cadastrar">
+                        
                         </form>
+                        <button onclick="cadastro()" class="btn btn-info btn-md">Cadastro</button>
                     </div>
                 </div>
             </div>
