--- a/src/login.html
+++ b/src/login.html
@@ -27,25 +27,22 @@
 
 <body>
     <!--Esse layout da página é apenas para auxílio no desenvolvimento da parte JavaScript-->
-    <header class="header">
-        <div class="row">
-            <div class="col-12 header_area">
-                <div class="row">
-                    <div class="col-3">
-                        <img src="assets/logo.png" class="logo">
-                    </div>
-                    <div class="col-9 menu_area">
-                        <nav class="nav nav-pills flex-column flex-sm-row">
-                            <a class="flex-sm-fill text-sm-center nav-link" href="index.html">Home</a>
-                            <a class="flex-sm-fill text-sm-center nav-link active" href="login.html">Login</a>
-                            <a class="flex-sm-fill text-sm-center nav-link" href="buscas.html">Buscas</a>
-                            <a class="flex-sm-fill text-sm-center nav-link" href="favoritos.html">Favoritos</a>
-                            <a class="flex-sm-fill text-sm-center nav-link" href="sobre.html">Sobre</a>
-                        </nav>
-                    </div>
-                </div>
-            </div>
-    </header>
+    <header class="header container-fluid">
+        <div class="row header_area">
+          <div class="col-3">
+            <img src="assets/logo.png" class="logo">
+          </div>
+          <div class="col-9 menu_area">
+            <nav class="nav nav-pills flex-column flex-sm-row">
+              <a class="flex-sm-fill text-sm-center nav-link" href="index.html">Home</a>
+              <a class="flex-sm-fill text-sm-center nav-link" href="login.html">Login</a>
+              <a class="flex-sm-fill text-sm-center nav-link" href="buscas.html">Buscas</a>
+              <a class="flex-sm-fill text-sm-center nav-link" href="favoritos.html">Favoritos</a>
+              <a class="flex-sm-fill text-sm-center nav-link" href="sobre.html">Sobre</a>
+            </nav>
+          </div>
+        </div>
+      </header>
 
     <div id="login">
         <h1>Faça seu Login</h1>
