--- a/src/buscas.html
+++ b/src/buscas.html
@@ -30,48 +30,46 @@
 
 <body onload="renderizaElementos()">
   <!--Esse layout da página é apenas para auxílio no desenvolvimento da parte JavaScript-->
-  <header class="header">
-    <div class="row">
-      <div class="col-12 header_area">
-        <div class="row">
-          <div class="col-3">
-            <img src="assets/logo.png" class="logo">
-          </div>
-          <div class="col-9 menu_area">
-            <nav class="nav nav-pills flex-column flex-sm-row">
-              <a class="flex-sm-fill text-sm-center nav-link" href="index.html">Home</a>
-              <a class="flex-sm-fill text-sm-center nav-link" href="login.html">Login</a>
-              <a class="flex-sm-fill text-sm-center nav-link" href="buscas.html">Buscas</a>
-              <a class="flex-sm-fill text-sm-center nav-link" href="favoritos.html">Favoritos</a>
-              <a class="flex-sm-fill text-sm-center nav-link" href="sobre.html">Sobre</a>
-            </nav>
-          </div>
-        </div>
+  <header class="header container-fluid">
+    <div class="row header_area">
+      <div class="col-3">
+        <img src="assets/logo.png" class="logo">
       </div>
+      <div class="col-9 menu_area">
+        <nav class="nav nav-pills flex-column flex-sm-row">
+          <a class="flex-sm-fill text-sm-center nav-link" href="index.html">Home</a>
+          <a class="flex-sm-fill text-sm-center nav-link" href="login.html">Login</a>
+          <a class="flex-sm-fill text-sm-center nav-link" href="buscas.html">Buscas</a>
+          <a class="flex-sm-fill text-sm-center nav-link" href="favoritos.html">Favoritos</a>
+          <a class="flex-sm-fill text-sm-center nav-link" href="sobre.html">Sobre</a>
+        </nav>
+      </div>
+    </div>
   </header>
 
-  <h1>Buscar página</h1>
-  <div id="Busca">
-    <!-- <form class="form inline">
-        <input class="form-control" type="Search" placeholder="Pesquisar" />
-      </form> -->
-    <form>
-      <input type="text" id="keywords" onkeyup="search()" placeholder="Busca" />
-    </form>
-    <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
-        aria-expanded="false">
-        <i class="fa fa-filter" aria-hidden="true"></i>
-      </button>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <li><a class="dropdown-item" id="avBaixa" onclick='filtroBaixo()' href="#">Boas Avaliações</a></li>
-        <li><a class="dropdown-item" href="#">Sites Salvos</a></li>
-      </ul>
+
+  <div id="Busca" class="container">
+    <h1>Buscar página</h1>
+    <div class="row row-cols-2">
+      <div class="col">
+        <form>
+          <input type="text" id="keywords" onkeyup="search()" placeholder="Busca" />
+        </form>
+      </div>
+      <div class="dropdown col">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+          data-bs-toggle="dropdown" aria-expanded="false">
+          <i class="fa fa-filter" aria-hidden="true"></i>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+          <li><a class="dropdown-item" id="avBaixa" onclick='filtroBaixo()' href="#">Boas Avaliações</a></li>
+          <li><a class="dropdown-item" href="#">Sites Salvos</a></li>
+        </ul>
+      </div>
     </div>
   </div>
-  <div id="resultado-container"></div>
 
-
+  <div id="resultado-container" class="container"></div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
