--- a/src/favoritos.html
+++ b/src/favoritos.html
@@ -27,14 +27,13 @@
 </head>
 
 <body onload="showFavorites()">
-  <!--Esse layout da página é apenas para auxílio no desenvolvimento da parte JavaScript-->
   <header class="header container-fluid">
-    <div class="row header_area">
+    <div class="row d-flex justify-content-center header_area">
       <div class="col-3">
         <img src="assets/logo.png" class="logo">
       </div>
-      <div class="col-9 menu_area">
-        <nav class="nav nav-pills flex-column flex-sm-row">
+      <div class="col-9 menu_area header_area">
+        <nav class="nav nav-pills d-flex justify-content-center justify-content-around">
           <a class="flex-sm-fill text-sm-center nav-link" href="index.html">Home</a>
           <a class="flex-sm-fill text-sm-center nav-link" href="login.html">Login</a>
           <a class="flex-sm-fill text-sm-center nav-link" href="buscas.html">Buscas</a>
