Adicionando template para o sobre

--- a/src/sobre.html
+++ b/src/sobre.html
@@ -26,7 +26,7 @@
 <body>
     <header class="header container-fluid">
         <div class="row d-flex justify-content-center header_area">
-            <div class="col-3">
+            <div class="col-4">
                 <img src="assets/logo.png" class="logo">
             </div>
             <div class="col-9 menu_area header_area">
@@ -40,6 +40,104 @@
             </div>
         </div>
     </header>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-4 .d-flex ">
+                <img id="dev_profile" src="./assets/devs/luca.jpg" alt="Luca">
+                <div>
+                    <h2>Luca Ribeiro</h2>
+                    <ul>
+                        <li>
+                            Idade: 19
+                        </li>
+                        <li>
+                            Função: Desenvolvedor
+                        </li>
+                        <li>
+                            
+                        </li>
+                    </ul>
+                    <h3>Redes Sociais</h3>
+                    <ul>
+                        <li>
+                            <a href="https://linkedin.com/in/luca-ribeiro">Linkedin</a>
+                        </li>
+                        <li>
+                            <a href="http://lattes.cnpq.br/1881583269287251">Lattes</a>
+                        </li>
+                        <li>
+                            <a href="mailto:lregne@sga.pucminas.br"></a>E-mail</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-4 .d-flex ">
+                <img id="dev_profile" src="./assets/devs/luca.jpg" alt="Luca">
+                <div>
+                    <h2>Luca Ribeiro</h2>
+                    <ul>
+                        <li>
+                            Idade: 19
+                        </li>
+                        <li>
+                            Função: Desenvolvedor
+                        </li>
+                        <li>
+
+                        </li>
+                    </ul>
+                    <h3>Redes Sociais</h3>
+                    <ul>
+                        <li>
+                            <a href="https://linkedin.com/in/luca-ribeiro">Linkedin</a>
+                        </li>
+                        <li>
+                            <a href="http://lattes.cnpq.br/1881583269287251">Lattes</a>
+                        </li>
+                        <li>
+                            <a href="mailto:lregne@sga.pucminas.br"></a>E-mail</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-4 .d-flex ">
+                <img id="dev_profile" src="./assets/devs/luca.jpg" alt="Luca">
+                <div>
+                    <h2>Luca Ribeiro</h2>
+                    <ul>
+                        <li>
+                            Idade: 19
+                        </li>
+                        <li>
+                            Função: Desenvolvedor
+                        </li>
+                        <li>
+
+                        </li>
+                    </ul>
+                    <h3>Redes Sociais</h3>
+                    <ul>
+                        <li>
+                            <a href="https://linkedin.com/in/luca-ribeiro">Linkedin</a>
+                        </li>
+                        <li>
+                            <a href="http://lattes.cnpq.br/1881583269287251">Lattes</a>
+                        </li>
+                        <li>
+                            <a href="mailto:lregne@sga.pucminas.br"></a>E-mail</a>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    </div>
+
+    </div>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
