Adicionado parcialmente a função de mostrar o nome da pessoa logada

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <link rel="stylesheet" href="styles/style.css">
+  <script src="scripts/loginInfo.js"></script>
 
   <script>
     function addDarkmodeWidget() {
@@ -39,6 +40,7 @@
           <a class="flex-sm-fill text-sm-center nav-link" href="buscas.html">Buscas</a>
           <a class="flex-sm-fill text-sm-center nav-link" href="favoritos.html">Favoritos</a>
           <a class="flex-sm-fill text-sm-center nav-link" href="sobre.html">Sobre</a>
+          <span class="flex-sm-fill text-sm-center nav-link text-white">Logado como:<br><b class="text-success text-decoration-underline font-italic nomeLogin"></b></span>
         </nav>
       </div>
     </div>
