--- a/src/sobre.html
+++ b/src/sobre.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link rel="stylesheet" href="styles/style.css">
+    <script src="scripts/loginInfo.js"></script>
 
     <script>
         function addDarkmodeWidget() {
@@ -26,16 +27,17 @@
 <body>
     <header class="header container-fluid">
         <div class="row d-flex justify-content-center header_area">
-            <div class="col-4">
+            <div class="col-2">
                 <img src="assets/logo.png" class="logo">
             </div>
-            <div class="col-9 menu_area header_area">
+            <div class="col-10 menu_area header_area">
                 <nav class="nav nav-pills d-flex justify-content-center justify-content-around">
                     <a class="flex-sm-fill text-sm-center nav-link" href="index.html">Home</a>
                     <a class="flex-sm-fill text-sm-center nav-link" href="login.html">Login</a>
                     <a class="flex-sm-fill text-sm-center nav-link" href="buscas.html">Buscas</a>
                     <a class="flex-sm-fill text-sm-center nav-link" href="favoritos.html">Favoritos</a>
                     <a class="flex-sm-fill text-sm-center nav-link" href="sobre.html">Sobre</a>
+                    <span class="flex-sm-fill text-sm-center nav-link text-white">Logado como:<br><b class="text-success text-decoration-underline font-italic nomeLogin"></b></span>
                 </nav>
             </div>
         </div>
